feat: selecting data

--- a/reviews.ipynb
+++ b/reviews.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a0cf8d95-07cf-4326-8708-edfa4c29cb9b",
+   "metadata": {},
+   "source": [
+    "## Overview of the dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "085da8f9-34a2-49e9-914b-25c8b76dca46",
@@ -186,9 +194,414 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5614de53-1d69-4389-ae4f-b908f0cd1d8f",
+   "metadata": {},
+   "source": [
+    "## Selecting data from the dataframe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88c77c2a-751d-4a93-a413-32fb39e6b52a",
+   "metadata": {},
+   "source": [
+    "### Select a column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "cb0521f2-6af6-4086-b253-fbdbd4121fc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        4.0\n",
+       "1        4.0\n",
+       "2        4.0\n",
+       "3        5.0\n",
+       "4        4.5\n",
+       "        ... \n",
+       "44995    4.0\n",
+       "44996    5.0\n",
+       "44997    5.0\n",
+       "44998    5.0\n",
+       "44999    5.0\n",
+       "Name: Rating, Length: 45000, dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[\"Rating\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56ffca5b-6372-4ada-96f7-bcc9a277dcea",
+   "metadata": {},
+   "source": [
+    "### Select multiple columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a4edaa41-1a4a-4846-a738-5b0102dc837e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Course Name</th>\n",
+       "      <th>Rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44995</th>\n",
+       "      <td>Python for Beginners with Examples</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44996</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44997</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44998</th>\n",
+       "      <td>Python for Beginners with Examples</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44999</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>45000 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             Course Name  Rating\n",
+       "0      The Python Mega Course: Build 10 Real World Ap...     4.0\n",
+       "1      The Python Mega Course: Build 10 Real World Ap...     4.0\n",
+       "2      The Python Mega Course: Build 10 Real World Ap...     4.0\n",
+       "3      The Python Mega Course: Build 10 Real World Ap...     5.0\n",
+       "4      The Python Mega Course: Build 10 Real World Ap...     4.5\n",
+       "...                                                  ...     ...\n",
+       "44995                 Python for Beginners with Examples     4.0\n",
+       "44996  The Python Mega Course: Build 10 Real World Ap...     5.0\n",
+       "44997  The Python Mega Course: Build 10 Real World Ap...     5.0\n",
+       "44998                 Python for Beginners with Examples     5.0\n",
+       "44999  The Python Mega Course: Build 10 Real World Ap...     5.0\n",
+       "\n",
+       "[45000 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[[\"Course Name\", \"Rating\"]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b469dbda-b437-4533-8b45-c07166070b29",
+   "metadata": {},
+   "source": [
+    "### Selecting a row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0e4400d4-6450-4a3f-9be7-1152b73a2bcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Course Name    The Python Mega Course: Build 10 Real World Ap...\n",
+       "Timestamp                              2021-04-02 03:33:24+00:00\n",
+       "Rating                                                       5.0\n",
+       "Comment                                                      NaN\n",
+       "Name: 3, dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.iloc[3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55581920-9c9a-4c12-9ba7-91243479c5ec",
+   "metadata": {},
+   "source": [
+    "### Selecting multiple rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "147f0a1e-c793-4b1a-ab11-624fb200547c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Course Name</th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Comment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>2021-04-02 05:12:34+00:00</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>2021-04-02 05:11:03+00:00</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         Course Name  \\\n",
+       "1  The Python Mega Course: Build 10 Real World Ap...   \n",
+       "2  The Python Mega Course: Build 10 Real World Ap...   \n",
+       "\n",
+       "                   Timestamp  Rating Comment  \n",
+       "1  2021-04-02 05:12:34+00:00     4.0     NaN  \n",
+       "2  2021-04-02 05:11:03+00:00     4.0     NaN  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.iloc[1:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93351af7-631a-4fa0-807f-08681ab0fc2f",
+   "metadata": {},
+   "source": [
+    "### Selecting a section"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a1c0b842-b97e-40d3-9936-d029a481df76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Course Name</th>\n",
+       "      <th>Rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         Course Name  Rating\n",
+       "1  The Python Mega Course: Build 10 Real World Ap...     4.0\n",
+       "2  The Python Mega Course: Build 10 Real World Ap...     4.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[[\"Course Name\",\"Rating\"]].iloc[1:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6aebcf41-eb27-425b-b77d-58ce51d5122f",
+   "metadata": {},
+   "source": [
+    "### Selecting a cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3628b557-2445-4414-b11e-63f685282b0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2021-04-02 05:11:03+00:00'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[\"Timestamp\"].iloc[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "92a3000a-fcdb-47c4-bc38-0fbea0de6891",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.at[2, \"Rating\"]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15cbd2ce-2c70-48fb-a2df-ebc476c0aba2",
+   "id": "c297b3ff-986f-4646-8e0a-27a18dceb152",
    "metadata": {},
    "outputs": [],
    "source": []
