feat: filtering the dataset

--- a/reviews.ipynb
+++ b/reviews.ipynb
@@ -5,7 +5,7 @@
    "id": "a0cf8d95-07cf-4326-8708-edfa4c29cb9b",
    "metadata": {},
    "source": [
-    "## Overview of the dataframe"
+    "## 1. Overview of the dataframe"
    ]
   },
   {
@@ -198,7 +198,7 @@
    "id": "5614de53-1d69-4389-ae4f-b908f0cd1d8f",
    "metadata": {},
    "source": [
-    "## Selecting data from the dataframe"
+    "## 2. Select data from the dataframe"
    ]
   },
   {
@@ -372,7 +372,7 @@
    "id": "b469dbda-b437-4533-8b45-c07166070b29",
    "metadata": {},
    "source": [
-    "### Selecting a row"
+    "### Select a row"
    ]
   },
   {
@@ -405,7 +405,7 @@
    "id": "55581920-9c9a-4c12-9ba7-91243479c5ec",
    "metadata": {},
    "source": [
-    "### Selecting multiple rows"
+    "### Select multiple rows"
    ]
   },
   {
@@ -484,7 +484,7 @@
    "id": "93351af7-631a-4fa0-807f-08681ab0fc2f",
    "metadata": {},
    "source": [
-    "### Selecting a section"
+    "### Select a section"
    ]
   },
   {
@@ -553,7 +553,7 @@
    "id": "6aebcf41-eb27-425b-b77d-58ce51d5122f",
    "metadata": {},
    "source": [
-    "### Selecting a cell"
+    "### Select a cell"
    ]
   },
   {
@@ -599,9 +599,241 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3d357c3e-68e3-455c-9061-78e743ee66ae",
+   "metadata": {},
+   "source": [
+    "### 3. Filter data based on conditions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75bdca76-3786-41ff-8d4b-5cc47db37834",
+   "metadata": {},
+   "source": [
+    "#### One condition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "66c0393a-2959-40e5-96a4-36d9f39cebd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Course Name</th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Comment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>2021-04-02 03:33:24+00:00</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>2021-04-02 03:31:49+00:00</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>2021-04-02 01:10:06+00:00</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>2021-04-02 00:44:54+00:00</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>2021-04-01 23:42:02+00:00</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44994</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>2018-01-01 01:19:24+00:00</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44996</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>2018-01-01 01:09:56+00:00</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44997</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>2018-01-01 01:08:11+00:00</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44998</th>\n",
+       "      <td>Python for Beginners with Examples</td>\n",
+       "      <td>2018-01-01 01:05:26+00:00</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44999</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>2018-01-01 01:01:16+00:00</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>29758 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             Course Name  \\\n",
+       "3      The Python Mega Course: Build 10 Real World Ap...   \n",
+       "4      The Python Mega Course: Build 10 Real World Ap...   \n",
+       "5      The Python Mega Course: Build 10 Real World Ap...   \n",
+       "6      The Python Mega Course: Build 10 Real World Ap...   \n",
+       "7      The Python Mega Course: Build 10 Real World Ap...   \n",
+       "...                                                  ...   \n",
+       "44994  The Python Mega Course: Build 10 Real World Ap...   \n",
+       "44996  The Python Mega Course: Build 10 Real World Ap...   \n",
+       "44997  The Python Mega Course: Build 10 Real World Ap...   \n",
+       "44998                 Python for Beginners with Examples   \n",
+       "44999  The Python Mega Course: Build 10 Real World Ap...   \n",
+       "\n",
+       "                       Timestamp  Rating Comment  \n",
+       "3      2021-04-02 03:33:24+00:00     5.0     NaN  \n",
+       "4      2021-04-02 03:31:49+00:00     4.5     NaN  \n",
+       "5      2021-04-02 01:10:06+00:00     4.5     NaN  \n",
+       "6      2021-04-02 00:44:54+00:00     4.5     NaN  \n",
+       "7      2021-04-01 23:42:02+00:00     5.0     NaN  \n",
+       "...                          ...     ...     ...  \n",
+       "44994  2018-01-01 01:19:24+00:00     5.0     NaN  \n",
+       "44996  2018-01-01 01:09:56+00:00     5.0     NaN  \n",
+       "44997  2018-01-01 01:08:11+00:00     5.0     NaN  \n",
+       "44998  2018-01-01 01:05:26+00:00     5.0     NaN  \n",
+       "44999  2018-01-01 01:01:16+00:00     5.0     NaN  \n",
+       "\n",
+       "[29758 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data[\"Rating\"] > 4]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7dc24c1-b71f-4a74-9ed1-17311c96373a",
+   "metadata": {},
+   "source": [
+    "#### Multiple conditions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3120234f-c77b-49bb-8e96-da63d07bb690",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Course Name</th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Comment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Course Name, Timestamp, Rating, Comment]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[(data[\"Rating\"] > 4) & (data[\"Course Name\"] == \"The Complete Python Course: Buld 10 Professional Real World Apps\")]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c297b3ff-986f-4646-8e0a-27a18dceb152",
+   "id": "fa10b833-e7ee-44ed-8480-b419cb3844e7",
    "metadata": {},
    "outputs": [],
    "source": []
