--- a/reviews.ipynb
+++ b/reviews.ipynb
@@ -10,14 +10,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "id": "085da8f9-34a2-49e9-914b-25c8b76dca46",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas\n",
+    "from datetime import datetime\n",
+    "from pytz import utc\n",
     "\n",
-    "data = pandas.read_csv(\"reviews.csv\")"
+    "data = pandas.read_csv(\"reviews.csv\", parse_dates=[\"Timestamp\"])"
    ]
   },
   {
@@ -779,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "3120234f-c77b-49bb-8e96-da63d07bb690",
    "metadata": {},
    "outputs": [
@@ -811,29 +813,307 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>The Complete Python Course: Build 10 Professio...</td>\n",
+       "      <td>2021-04-01 01:32:52+00:00</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>The Complete Python Course: Build 10 Professio...</td>\n",
+       "      <td>2021-03-31 22:53:04+00:00</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>The Complete Python Course: Build 10 Professio...</td>\n",
+       "      <td>2021-03-31 19:15:25+00:00</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>The Complete Python Course: Build 10 Professio...</td>\n",
+       "      <td>2021-03-31 17:23:15+00:00</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>The Complete Python Course: Build 10 Professio...</td>\n",
+       "      <td>2021-03-29 21:54:00+00:00</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2501</th>\n",
+       "      <td>The Complete Python Course: Build 10 Professio...</td>\n",
+       "      <td>2021-01-14 21:19:44+00:00</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2502</th>\n",
+       "      <td>The Complete Python Course: Build 10 Professio...</td>\n",
+       "      <td>2021-01-14 20:57:14+00:00</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2509</th>\n",
+       "      <td>The Complete Python Course: Build 10 Professio...</td>\n",
+       "      <td>2021-01-14 15:46:18+00:00</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2523</th>\n",
+       "      <td>The Complete Python Course: Build 10 Professio...</td>\n",
+       "      <td>2021-01-13 22:21:14+00:00</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2525</th>\n",
+       "      <td>The Complete Python Course: Build 10 Professio...</td>\n",
+       "      <td>2021-01-13 20:44:02+00:00</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>351 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Course Name, Timestamp, Rating, Comment]\n",
-       "Index: []"
+       "                                            Course Name  \\\n",
+       "31    The Complete Python Course: Build 10 Professio...   \n",
+       "34    The Complete Python Course: Build 10 Professio...   \n",
+       "43    The Complete Python Course: Build 10 Professio...   \n",
+       "45    The Complete Python Course: Build 10 Professio...   \n",
+       "101   The Complete Python Course: Build 10 Professio...   \n",
+       "...                                                 ...   \n",
+       "2501  The Complete Python Course: Build 10 Professio...   \n",
+       "2502  The Complete Python Course: Build 10 Professio...   \n",
+       "2509  The Complete Python Course: Build 10 Professio...   \n",
+       "2523  The Complete Python Course: Build 10 Professio...   \n",
+       "2525  The Complete Python Course: Build 10 Professio...   \n",
+       "\n",
+       "                      Timestamp  Rating Comment  \n",
+       "31    2021-04-01 01:32:52+00:00     5.0     NaN  \n",
+       "34    2021-03-31 22:53:04+00:00     5.0     NaN  \n",
+       "43    2021-03-31 19:15:25+00:00     5.0     NaN  \n",
+       "45    2021-03-31 17:23:15+00:00     5.0     NaN  \n",
+       "101   2021-03-29 21:54:00+00:00     4.5     NaN  \n",
+       "...                         ...     ...     ...  \n",
+       "2501  2021-01-14 21:19:44+00:00     4.5     NaN  \n",
+       "2502  2021-01-14 20:57:14+00:00     5.0     NaN  \n",
+       "2509  2021-01-14 15:46:18+00:00     5.0     NaN  \n",
+       "2523  2021-01-13 22:21:14+00:00     5.0     NaN  \n",
+       "2525  2021-01-13 20:44:02+00:00     5.0     NaN  \n",
+       "\n",
+       "[351 rows x 4 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[(data[\"Rating\"] > 4) & (data[\"Course Name\"] == \"The Complete Python Course: Buld 10 Professional Real World Apps\")]"
+    "data[(data[\"Rating\"] > 4) & (data[\"Course Name\"] == \"The Complete Python Course: Build 10 Professional OOP Apps\")]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ece67604-7cc1-406d-b21a-bdd5f7e0b4d9",
+   "metadata": {},
+   "source": [
+    "### 4. Time-based filtering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "d2e8ce07-a8ba-44ea-abad-3723af1cd4db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Course Name</th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Comment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3065</th>\n",
+       "      <td>Interactive Data Visualization with Python and...</td>\n",
+       "      <td>2020-12-30 23:28:34+00:00</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3066</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>2020-12-30 22:59:02+00:00</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3067</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>2020-12-30 22:40:10+00:00</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3068</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>2020-12-30 21:56:41+00:00</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3069</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>2020-12-30 21:14:34+00:00</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9729</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>2020-07-01 03:09:44+00:00</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9730</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>2020-07-01 03:09:12+00:00</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9731</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>2020-07-01 02:40:58+00:00</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9732</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>2020-07-01 02:04:02+00:00</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>nice</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9733</th>\n",
+       "      <td>The Python Mega Course: Build 10 Real World Ap...</td>\n",
+       "      <td>2020-07-01 00:01:34+00:00</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Hard to follow if u have no experience program...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6669 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            Course Name  \\\n",
+       "3065  Interactive Data Visualization with Python and...   \n",
+       "3066  The Python Mega Course: Build 10 Real World Ap...   \n",
+       "3067  The Python Mega Course: Build 10 Real World Ap...   \n",
+       "3068  The Python Mega Course: Build 10 Real World Ap...   \n",
+       "3069  The Python Mega Course: Build 10 Real World Ap...   \n",
+       "...                                                 ...   \n",
+       "9729  The Python Mega Course: Build 10 Real World Ap...   \n",
+       "9730  The Python Mega Course: Build 10 Real World Ap...   \n",
+       "9731  The Python Mega Course: Build 10 Real World Ap...   \n",
+       "9732  The Python Mega Course: Build 10 Real World Ap...   \n",
+       "9733  The Python Mega Course: Build 10 Real World Ap...   \n",
+       "\n",
+       "                     Timestamp  Rating  \\\n",
+       "3065 2020-12-30 23:28:34+00:00     3.0   \n",
+       "3066 2020-12-30 22:59:02+00:00     4.0   \n",
+       "3067 2020-12-30 22:40:10+00:00     4.5   \n",
+       "3068 2020-12-30 21:56:41+00:00     4.5   \n",
+       "3069 2020-12-30 21:14:34+00:00     4.5   \n",
+       "...                        ...     ...   \n",
+       "9729 2020-07-01 03:09:44+00:00     3.5   \n",
+       "9730 2020-07-01 03:09:12+00:00     5.0   \n",
+       "9731 2020-07-01 02:40:58+00:00     4.0   \n",
+       "9732 2020-07-01 02:04:02+00:00     5.0   \n",
+       "9733 2020-07-01 00:01:34+00:00     2.0   \n",
+       "\n",
+       "                                                Comment  \n",
+       "3065                                                NaN  \n",
+       "3066                                                NaN  \n",
+       "3067                                                NaN  \n",
+       "3068                                                NaN  \n",
+       "3069                                                NaN  \n",
+       "...                                                 ...  \n",
+       "9729                                                NaN  \n",
+       "9730                                                NaN  \n",
+       "9731                                                NaN  \n",
+       "9732                                               nice  \n",
+       "9733  Hard to follow if u have no experience program...  \n",
+       "\n",
+       "[6669 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[(data[\"Timestamp\"] >= datetime(2020, 7, 1, tzinfo=utc)) & (data[\"Timestamp\"] <= datetime(2020, 12, 31, tzinfo=utc))]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa10b833-e7ee-44ed-8480-b419cb3844e7",
+   "id": "c094d42c-438a-4bc6-873d-f6d47e40d350",
    "metadata": {},
    "outputs": [],
    "source": []
