feat: turning data into information

--- a/reviews.ipynb
+++ b/reviews.ipynb
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "id": "d2e8ce07-a8ba-44ea-abad-3723af1cd4db",
    "metadata": {},
    "outputs": [
@@ -1101,19 +1101,321 @@
        "[6669 rows x 4 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[(data[\"Timestamp\"] >= datetime(2020, 7, 1, tzinfo=utc)) & (data[\"Timestamp\"] <= datetime(2020, 12, 31, tzinfo=utc))]"
+    "data[(data[\"Timestamp\"] >= datetime(2020, 7, 1, tzinfo=utc)) & \n",
+    "     (data[\"Timestamp\"] <= datetime(2020, 12, 31, tzinfo=utc))]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ab59145-f4a0-45af-b4fc-f5f0c29c9887",
+   "metadata": {},
+   "source": [
+    "### 5. From data to information"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "192ec5bc-ca15-46a5-96a0-d83685d3fd6c",
+   "metadata": {},
+   "source": [
+    "#### Average rating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "948a9b05-cb61-49f5-a802-2d7c9e631d68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.442155555555556"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[\"Rating\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebb5318f-1a11-47a7-a72c-90fc60832ce1",
+   "metadata": {},
+   "source": [
+    "#### Average rating for a particular course"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "6a4fc34f-92cf-45dd-bbab-c37c940e8093",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.477270180942244"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data[\"Course Name\"] == \"The Python Mega Course: Build 10 Real World Applications\"][\"Rating\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ee3ecb6-70a3-442b-99d8-50ceae615021",
+   "metadata": {},
+   "source": [
+    "#### Average rating for a particular period"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "62d31267-9821-42a0-88fc-47589d00213c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.476541271662339"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[(data[\"Timestamp\"] >= datetime(2020, 1, 1, tzinfo=utc)) & \n",
+    "     (data[\"Timestamp\"] <= datetime(2020, 12, 31, tzinfo=utc))][\"Rating\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aeac7900-48aa-4517-955a-a2c36d3928e0",
+   "metadata": {},
+   "source": [
+    "#### Average rating for a particular period for a particular course"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "100f7d38-3b1d-4fff-8c57-2bc9136ba146",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.506076089208037"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[(data[\"Timestamp\"] >= datetime(2020, 1, 1, tzinfo=utc)) & \n",
+    "     (data[\"Timestamp\"] <= datetime(2020, 12, 31, tzinfo=utc)) & \n",
+    "     (data[\"Course Name\"] == \"The Python Mega Course: Build 10 Real World Applications\")][\"Rating\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "400e2dcf-b81a-4855-a22f-91c5d49f2863",
+   "metadata": {},
+   "source": [
+    "#### Average of uncommented ratings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "92d395b6-cbb0-4687-b1b3-73133a78cf0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.433679746603492"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data[\"Comment\"].isnull()][\"Rating\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acdcac9e-d8b2-4ccd-890a-9f97a69873f0",
+   "metadata": {},
+   "source": [
+    "#### Average of commented ratings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "0df1e56f-57f2-43b3-ac9e-1dd53110d50b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.489777908515959"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data[\"Comment\"].notnull()][\"Rating\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8003685-d8b3-4661-ab23-ad14ed3d69d0",
+   "metadata": {},
+   "source": [
+    "#### Number of uncommented ratings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "fc6a2241-a351-4a74-9bcb-1e729d994e36",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "38201"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data[\"Comment\"].isnull()][\"Rating\"].count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ed1adc3-cd58-4210-b957-1ca0593bbd50",
+   "metadata": {},
+   "source": [
+    "#### Number of commented ratings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "c356b37b-2f71-4bd3-a4dc-f3b51e20b265",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6799"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data[\"Comment\"].notnull()][\"Rating\"].count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e358dc5e-1db9-4ded-82aa-7e3f8522aea8",
+   "metadata": {},
+   "source": [
+    "#### Number of comments containing a certain word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "f9d928ae-d11f-4f3d-aff6-17fbcfbe7373",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "77"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data[\"Comment\"].str.contains(\"accent\", na=False)][\"Rating\"].count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b4b12de-a62d-477b-b095-f42af9768287",
+   "metadata": {},
+   "source": [
+    "#### Average of commented ratings with \"accent\" in comment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "1c0aa5d5-1d25-4e98-bacf-379d540ea0f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.8636363636363638"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data[\"Comment\"].str.contains(\"accent\", na=False)][\"Rating\"].mean()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c094d42c-438a-4bc6-873d-f6d47e40d350",
+   "id": "84e0830f-12f7-4029-9da7-a04f42fc5e85",
    "metadata": {},
    "outputs": [],
    "source": []
