--- a/reviews.ipynb
+++ b/reviews.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "085da8f9-34a2-49e9-914b-25c8b76dca46",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "8a316631-2265-4e38-a1f9-63e56c197404",
    "metadata": {},
    "outputs": [
@@ -103,15 +103,15 @@
        "3  The Python Mega Course: Build 10 Real World Ap...   \n",
        "4  The Python Mega Course: Build 10 Real World Ap...   \n",
        "\n",
-       "                   Timestamp  Rating Comment  \n",
-       "0  2021-04-02 06:25:52+00:00     4.0     NaN  \n",
-       "1  2021-04-02 05:12:34+00:00     4.0     NaN  \n",
-       "2  2021-04-02 05:11:03+00:00     4.0     NaN  \n",
-       "3  2021-04-02 03:33:24+00:00     5.0     NaN  \n",
-       "4  2021-04-02 03:31:49+00:00     4.5     NaN  "
+       "                  Timestamp  Rating Comment  \n",
+       "0 2021-04-02 06:25:52+00:00     4.0     NaN  \n",
+       "1 2021-04-02 05:12:34+00:00     4.0     NaN  \n",
+       "2 2021-04-02 05:11:03+00:00     4.0     NaN  \n",
+       "3 2021-04-02 03:33:24+00:00     5.0     NaN  \n",
+       "4 2021-04-02 03:31:49+00:00     4.5     NaN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "d062d67c-49a6-4c5b-8031-cca8a39213fc",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
        "(45000, 4)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "60e587cd-9c1c-4bda-8c45-e574361b4fec",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
        "Index(['Course Name', 'Timestamp', 'Rating', 'Comment'], dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "250e1e2a-7248-4924-9926-03f598dff11b",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
        "array([[<AxesSubplot:title={'center':'Rating'}>]], dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "cb0521f2-6af6-4086-b253-fbdbd4121fc6",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
        "Name: Rating, Length: 45000, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "a4edaa41-1a4a-4846-a738-5b0102dc837e",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
        "[45000 rows x 2 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "0e4400d4-6450-4a3f-9be7-1152b73a2bcc",
    "metadata": {},
    "outputs": [
@@ -393,7 +393,7 @@
        "Name: 3, dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "147f0a1e-c793-4b1a-ab11-624fb200547c",
    "metadata": {},
    "outputs": [
@@ -467,12 +467,12 @@
        "1  The Python Mega Course: Build 10 Real World Ap...   \n",
        "2  The Python Mega Course: Build 10 Real World Ap...   \n",
        "\n",
-       "                   Timestamp  Rating Comment  \n",
-       "1  2021-04-02 05:12:34+00:00     4.0     NaN  \n",
-       "2  2021-04-02 05:11:03+00:00     4.0     NaN  "
+       "                  Timestamp  Rating Comment  \n",
+       "1 2021-04-02 05:12:34+00:00     4.0     NaN  \n",
+       "2 2021-04-02 05:11:03+00:00     4.0     NaN  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "a1c0b842-b97e-40d3-9936-d029a481df76",
    "metadata": {},
    "outputs": [
@@ -541,7 +541,7 @@
        "2  The Python Mega Course: Build 10 Real World Ap...     4.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,17 +560,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "3628b557-2445-4414-b11e-63f685282b0c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2021-04-02 05:11:03+00:00'"
+       "Timestamp('2021-04-02 05:11:03+0000', tz='UTC')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "92a3000a-fcdb-47c4-bc38-0fbea0de6891",
    "metadata": {},
    "outputs": [
@@ -591,7 +591,7 @@
        "4.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "66c0393a-2959-40e5-96a4-36d9f39cebd6",
    "metadata": {},
    "outputs": [
@@ -746,23 +746,23 @@
        "44998                 Python for Beginners with Examples   \n",
        "44999  The Python Mega Course: Build 10 Real World Ap...   \n",
        "\n",
-       "                       Timestamp  Rating Comment  \n",
-       "3      2021-04-02 03:33:24+00:00     5.0     NaN  \n",
-       "4      2021-04-02 03:31:49+00:00     4.5     NaN  \n",
-       "5      2021-04-02 01:10:06+00:00     4.5     NaN  \n",
-       "6      2021-04-02 00:44:54+00:00     4.5     NaN  \n",
-       "7      2021-04-01 23:42:02+00:00     5.0     NaN  \n",
-       "...                          ...     ...     ...  \n",
-       "44994  2018-01-01 01:19:24+00:00     5.0     NaN  \n",
-       "44996  2018-01-01 01:09:56+00:00     5.0     NaN  \n",
-       "44997  2018-01-01 01:08:11+00:00     5.0     NaN  \n",
-       "44998  2018-01-01 01:05:26+00:00     5.0     NaN  \n",
-       "44999  2018-01-01 01:01:16+00:00     5.0     NaN  \n",
+       "                      Timestamp  Rating Comment  \n",
+       "3     2021-04-02 03:33:24+00:00     5.0     NaN  \n",
+       "4     2021-04-02 03:31:49+00:00     4.5     NaN  \n",
+       "5     2021-04-02 01:10:06+00:00     4.5     NaN  \n",
+       "6     2021-04-02 00:44:54+00:00     4.5     NaN  \n",
+       "7     2021-04-01 23:42:02+00:00     5.0     NaN  \n",
+       "...                         ...     ...     ...  \n",
+       "44994 2018-01-01 01:19:24+00:00     5.0     NaN  \n",
+       "44996 2018-01-01 01:09:56+00:00     5.0     NaN  \n",
+       "44997 2018-01-01 01:08:11+00:00     5.0     NaN  \n",
+       "44998 2018-01-01 01:05:26+00:00     5.0     NaN  \n",
+       "44999 2018-01-01 01:01:16+00:00     5.0     NaN  \n",
        "\n",
        "[29758 rows x 4 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "3120234f-c77b-49bb-8e96-da63d07bb690",
    "metadata": {},
    "outputs": [
@@ -909,23 +909,23 @@
        "2523  The Complete Python Course: Build 10 Professio...   \n",
        "2525  The Complete Python Course: Build 10 Professio...   \n",
        "\n",
-       "                      Timestamp  Rating Comment  \n",
-       "31    2021-04-01 01:32:52+00:00     5.0     NaN  \n",
-       "34    2021-03-31 22:53:04+00:00     5.0     NaN  \n",
-       "43    2021-03-31 19:15:25+00:00     5.0     NaN  \n",
-       "45    2021-03-31 17:23:15+00:00     5.0     NaN  \n",
-       "101   2021-03-29 21:54:00+00:00     4.5     NaN  \n",
-       "...                         ...     ...     ...  \n",
-       "2501  2021-01-14 21:19:44+00:00     4.5     NaN  \n",
-       "2502  2021-01-14 20:57:14+00:00     5.0     NaN  \n",
-       "2509  2021-01-14 15:46:18+00:00     5.0     NaN  \n",
-       "2523  2021-01-13 22:21:14+00:00     5.0     NaN  \n",
-       "2525  2021-01-13 20:44:02+00:00     5.0     NaN  \n",
+       "                     Timestamp  Rating Comment  \n",
+       "31   2021-04-01 01:32:52+00:00     5.0     NaN  \n",
+       "34   2021-03-31 22:53:04+00:00     5.0     NaN  \n",
+       "43   2021-03-31 19:15:25+00:00     5.0     NaN  \n",
+       "45   2021-03-31 17:23:15+00:00     5.0     NaN  \n",
+       "101  2021-03-29 21:54:00+00:00     4.5     NaN  \n",
+       "...                        ...     ...     ...  \n",
+       "2501 2021-01-14 21:19:44+00:00     4.5     NaN  \n",
+       "2502 2021-01-14 20:57:14+00:00     5.0     NaN  \n",
+       "2509 2021-01-14 15:46:18+00:00     5.0     NaN  \n",
+       "2523 2021-01-13 22:21:14+00:00     5.0     NaN  \n",
+       "2525 2021-01-13 20:44:02+00:00     5.0     NaN  \n",
        "\n",
        "[351 rows x 4 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "id": "d2e8ce07-a8ba-44ea-abad-3723af1cd4db",
    "metadata": {},
    "outputs": [
@@ -1101,7 +1101,7 @@
        "[6669 rows x 4 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "id": "948a9b05-cb61-49f5-a802-2d7c9e631d68",
    "metadata": {},
    "outputs": [
@@ -1139,7 +1139,7 @@
        "4.442155555555556"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "id": "6a4fc34f-92cf-45dd-bbab-c37c940e8093",
    "metadata": {},
    "outputs": [
@@ -1168,7 +1168,7 @@
        "4.477270180942244"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "id": "62d31267-9821-42a0-88fc-47589d00213c",
    "metadata": {},
    "outputs": [
@@ -1197,7 +1197,7 @@
        "4.476541271662339"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1217,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "id": "100f7d38-3b1d-4fff-8c57-2bc9136ba146",
    "metadata": {},
    "outputs": [
@@ -1227,7 +1227,7 @@
        "4.506076089208037"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1248,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "id": "92d395b6-cbb0-4687-b1b3-73133a78cf0f",
    "metadata": {},
    "outputs": [
@@ -1258,7 +1258,7 @@
        "4.433679746603492"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
    "id": "0df1e56f-57f2-43b3-ac9e-1dd53110d50b",
    "metadata": {},
    "outputs": [
@@ -1287,7 +1287,7 @@
        "4.489777908515959"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 22,
    "id": "fc6a2241-a351-4a74-9bcb-1e729d994e36",
    "metadata": {},
    "outputs": [
@@ -1316,7 +1316,7 @@
        "38201"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1335,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "id": "c356b37b-2f71-4bd3-a4dc-f3b51e20b265",
    "metadata": {},
    "outputs": [
@@ -1345,7 +1345,7 @@
        "6799"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1364,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "id": "f9d928ae-d11f-4f3d-aff6-17fbcfbe7373",
    "metadata": {},
    "outputs": [
@@ -1374,7 +1374,7 @@
        "77"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 25,
    "id": "1c0aa5d5-1d25-4e98-bacf-379d540ea0f8",
    "metadata": {},
    "outputs": [
@@ -1403,7 +1403,7 @@
        "3.8636363636363638"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
