feat: other types of plots

--- a/reviews_plotting.ipynb
+++ b/reviews_plotting.ipynb
@@ -246,9 +246,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5a3fba7c-edd3-49c8-aaac-51f338155e19",
+   "metadata": {},
+   "source": [
+    "### Number of ratings by course"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "fbbf7ae8-a68f-427e-83c9-5c6a4dbe0fb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (3554654880.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/fh/s3_4vmc905g2nzr4w8vc47880000gn/T/ipykernel_43488/3554654880.py\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    plt.pie(share, labels=share.index\u001b[0m\n\u001b[0m                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
+   "source": [
+    "share = data.groupby([\"Course Name\"])[\"Rating\"].count()\n",
+    "plt.pie(share, labels=share.index"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5a0ec3f-3456-4d63-aa89-a35287848926",
+   "id": "7cbdbbf9-72fe-4cb0-b145-364ef0199e37",
    "metadata": {},
    "outputs": [],
    "source": []
